@@ -10,6 +10,10 @@ Release date: 2015-03-28
 Core and Builtins
 -----------------
 
+- Issue #23573: Increased performance of string search operations (str.find,
+  str.index, str.count, the in operator, str.split, str.partition) with
+  arguments of different kinds (UCS1, UCS2, UCS4).
+
 - Issue #23753: Python doesn't support anymore platforms without stat() or
   fstat(), these functions are always required.
 
